# ChatbotSimulator

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: README.md  app.py  estimate_tokens.py  evaluate_conversation.py  generate_llm_response.py  kt_chatbot_client.py  pyproject.toml  requirements.txt  validate_api_key.py
backend/config/: __init__.py  llm_config.py
src/: App.tsx  index.css
src/components/: ChatbotSimulator.tsx  ChatbotSimulatorV2.tsx  ConversationDisplay.tsx  ConversationSet.tsx
src/components/SimulationEvaluation/: EvaluationCards.tsx  EvaluationRow.tsx  EvaluationTable.tsx  ParsedResponse.tsx  ScoreDashboard.tsx  UploadSection.tsx  evaluationService.ts  index.tsx  parsers.ts
src/components/ui/: card.tsx  select.tsx  sonner.tsx
src/styles/: globals.css
