[project]
name = "chatbot-simulator-backend"
version = "0.1.0"
description = "Backend server for Chatbot Simulator"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "requests==2.31.0",
    "tiktoken==0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "app.py",
    "validate_api_key.py",
    "generate_llm_response.py",
    "estimate_tokens.py",
    "config",
]
